[gd_scene load_steps=2 format=2]

[ext_resource path="res://SpoolSelector.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="PanelContainer" parent="."]
anchor_right = 1.0
rect_min_size = Vector2( 0, 25 )

[node name="HBC" type="HBoxContainer" parent="Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1359.0
margin_bottom = 27.0

[node name="SpoolSelectionList" type="OptionButton" parent="Panel/HBC"]
margin_right = 29.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="Panel/HBC"]
margin_left = 33.0
margin_top = 3.0
margin_right = 90.0
margin_bottom = 17.0
text = " is active"

[node name="NegateButton" type="Button" parent="Panel/HBC"]
visible = false
margin_left = 96.0
margin_right = 108.0
margin_bottom = 20.0
text = " is active"

[connection signal="item_selected" from="Panel/HBC/SpoolSelectionList" to="." method="_on_SpoolSelectionList_item_selected"]
[connection signal="pressed" from="Panel/HBC/NegateButton" to="." method="_on_NegateButton_pressed"]
